--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@
         </div>
       </div>
     </footer>
+        <a href="https://niknovgorod.github.io/portfolio" class="inner-page-backlink">
+          Назад на главную</a
+        >
     <script src="js/script.js"></script>
   </body>
 </html>
